CSS/style.css
* {
    box-sizing: border-box;
    margin:0;
}
body {
    font-family: "Merriweather sans", sans-serif;
    color:
    #36a5db;
}
.wrapper {
    max-width: 100%;
    height:100vh;
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 0 auto;
}
h1 {
    font-size: 2em;
    font-weight: bold;
}

.start {
    width:170px;
    height: 45px;
    border: 2px solid #90cdeb;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 50px;
    transition: all 0.2s ease;
    cursor: pointer;
    font-weight: bold;
    margin-top: 30px;
}
.start:hover {
    color: white;
    background-color:#90cdeb ;
}
.game {
width: 500px;
height: 500px;
display: flex;
flex-direction: column;
}
.header {
    display:flex;
    color: #9A9A9A;
    font-size: 20px;
}

.header .player-o {
    flex: 1;
    border-bottom: 5px solid #eee;
    margin-bottom: 5px;
    padding-bottom: 8px;
    
}

.player-x {
    flex: 1;
    border-bottom: 5px solid #eee;
    margin-bottom: 5px;
    padding-bottom: 8px;
}

.player-o.active{
    color: #0fb1a9;
    border-bottom: 5px solid #0fb1a9;
}

.player-x.active{
    color: #A71D23;
    border-bottom: 5px solid #A71D23;
}
.board {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(3, 1fr);
    gap: 0px;
    flex-grow: 1;
}

.board-tile {
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 60px;
    cursor: pointer;
}
.board-tile:hover{
    background-color: hsl(0, 24%, 87%);
}

.board-tile:not(:nth-child(3n)){
    border-right: 2px solid #a0eeeb;
}

.board-tile:not(:nth-last-child(-n + 3)){
    border-bottom: 2px solid #a0eeeb;
}

.board-tile.tile-x {
    color: #A71D23;
}

.board-tile.tile-o{
    color:#0fb1a9;
}


/* Style for Modal */

.popup{
    background-color: rgb(235, 225, 225, 0.8);
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0px;
    left: 0px;
    display: none;
    justify-content: center;
    align-items: center;
}

.popup-content {
    width: 35em;
    height: 20em;
    background-color: white;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    border-radius: 5px;
    position: relative;
    box-shadow: 1px 1px 8px 1px grey;
}

/* style for getting user input  */
.img {
    width:50px;
    height: auto;
}

img {
    width: 100%;
    height: auto;
}

